--- a/src/pages/cv.mdx
+++ b/src/pages/cv.mdx
@@ -5,238 +5,159 @@ import SpeechButton from '@site/src/components/SpeechButton';
 import AltmetricBadge from '@site/src/components/AltmetricBadge';
 import VisitorMap from '@site/src/components/VisitorMap';
 
-# Curriculum Vitae
-
 <div className="cvPage">
 
-<div className="cvActions">
-  <a href="#" className="cvAction" onClick={(e) => { e.preventDefault(); window.print(); }} aria-label="Download PDF" title="Download PDF">
-    <span className="icon">⬇️</span>
-    <span>Download PDF</span>
-  </a>
-  <a href="#" className="cvAction" onClick={(e) => { e.preventDefault(); window.print(); }} aria-label="Print" title="Print">
-    <span className="icon">🖨️</span>
-    <span>Print</span>
-  </a>
-</div>
-
-## Personal Information
-
-<div className="piIntro">
-  <img src="/img/cv_person.png" alt="Liangchao Deng" className="cvAvatar" />
-  <div className="cvHeaderInfo">
-    <div className="cvPronunciation">
-      <span className="cvNameText">
-        <strong>Liangchao Deng</strong> (邓良超)
-      </span>
-      <SpeechButton
-        text="邓良超"
-        fallbackText="Pronunciation: Liáng-chāo (lee-ANG chao)"
-        title="Play pronunciation"
-      />
-    </div>
-    <div className="cvRole">Joint Ph.D. Candidate in Crop Science (SHZU × CAS-CEMPS)</div>
-    <div className="cvAffiliation">2023 – 2026 (expected)</div>
-    <div className="cvSocial">
-      <a href="https://scholar.google.com/citations?hl=en&user=u3GFRMQAAAAJ&view_op=list_works" target="_blank" rel="noopener" className="button button--sm button--secondary" title="Google Scholar">🔎 Scholar</a>
-      <a href="https://orcid.org/0000-0002-5194-0655" target="_blank" rel="noopener" className="button button--sm button--secondary" title="ORCID">🟢 ORCID</a>
-      <a href="https://www.researchgate.net/profile/Liangchao-Deng?ev=hdr_xprf" target="_blank" rel="noopener" className="button button--sm button--secondary" title="ResearchGate">🧪 RG</a>
-      <a href="https://github.com/smiler488" target="_blank" rel="noopener" className="button button--sm button--secondary" title="GitHub">🐙 GitHub</a>
-    </div>
-  </div>
-</div>
-
-<div className="piGrid">
-  <div>
-    <strong>Contact Information:</strong>
+  {/* Header Section */}
+  <section className="cvHeaderSection">
+    <img src="/img/cv_person.png" alt="Liangchao Deng" className="cvAvatarGiant" />
+    <h1 className="cvNameLarge">Liangchao Deng <span style={{fontSize: '0.5em', opacity: 0.6, fontWeight: 400}}>(邓良超)</span></h1>
+    <div className="cvTitle">Ph.D. Candidate in Crop Science (SHZU × CAS-CEMPS)</div>
     
-    - **Institutional Email:** [liangchaodeng@stu.shzu.edu.cn](mailto:liangchaodeng@stu.shzu.edu.cn)
-    - **Personal Email:** [googalphdlc@gmail.com](mailto:googalphdlc@gmail.com)
-    - **Website:** [https://smiler488.github.io](https://smiler488.github.io)
+    <div className="cvSocialRow">
+      <a href="https://scholar.google.com/citations?hl=en&user=u3GFRMQAAAAJ&view_op=list_works" target="_blank" className="button button--secondary button--sm">Google Scholar</a>
+      <a href="https://orcid.org/0000-0002-5194-0655" target="_blank" className="button button--secondary button--sm">ORCID</a>
+      <a href="https://github.com/smiler488" target="_blank" className="button button--secondary button--sm">GitHub</a>
+      <a href="mailto:googalphdlc@gmail.com" className="button button--primary button--sm">Email Me</a>
+      <button className="button button--outline button--secondary button--sm" onClick={() => window.print()}>Print CV</button>
+    </div>
+  </section>
+
+  <div className="row">
+    {/* Left Column: Education & Experience */}
+    <div className="col col--7">
+      
+      <h2 className="cvSectionTitle">Education</h2>
+      <div className="cvTimeline">
+        <div className="cvTimelineItem">
+          <div className="cvTimelineDate">2023 – 2026 (Expected)</div>
+          <div className="cvTimelineTitle">Ph.D. in Crop Science</div>
+          <div className="cvTimelineSubtitle">Shihezi University (SHZU) × CAS-CEMPS</div>
+          <p>Joint Ph.D. Training with the Center for Excellence in Molecular Plant Sciences, Chinese Academy of Sciences.</p>
+          <div className="cvBadgeContainer">
+            <span className="cvBadge">Precision Agriculture</span>
+            <span className="cvBadge">Canopy Photosynthesis</span>
+          </div>
+        </div>
+        <div className="cvTimelineItem">
+          <div className="cvTimelineDate">2016 – 2021</div>
+          <div className="cvTimelineTitle">B.Sc. in Information & Computational Science</div>
+          <div className="cvTimelineSubtitle">Shihezi University</div>
+          <p>Undergraduate Thesis: Numerical Solution of Phase Transition Equations.</p>
+        </div>
+      </div>
+
+      <h2 className="cvSectionTitle" style={{marginTop: '2rem'}}>Research Experience</h2>
+      <div className="cvTimeline">
+        <div className="cvTimelineItem">
+          <div className="cvTimelineDate">2024 – Present</div>
+          <div className="cvTimelineTitle">Generative AI for Agriculture</div>
+          <div className="cvTimelineSubtitle">Research Assistant</div>
+          <p>Developing image-to-3D generative workflows (Diffusion, NeRF) to accelerate 3D plant modeling. Integrating LLMs into phenotyping pipelines.</p>
+        </div>
+        <div className="cvTimelineItem">
+          <div className="cvTimelineDate">2021 – Present</div>
+          <div className="cvTimelineTitle">Next-Gen Phenotyping</div>
+          <div className="cvTimelineSubtitle">Research Assistant</div>
+          <p>Implementing 3D Gaussian Splatting and Ray Tracing for high-fidelity canopy reconstruction and photosynthetic simulation.</p>
+          <div className="cvBadgeContainer">
+            <span className="cvBadge">Ray Tracing</span>
+            <span className="cvBadge">3DGS</span>
+            <span className="cvBadge">Lidar Simulation</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    {/* Right Column: Skills & Interests */}
+    <div className="col col--5">
+      
+      <h2 className="cvSectionTitle">Skills</h2>
+      
+      <div className="card margin-bottom--md shadow--tl">
+        <div className="card__header">
+          <h3>AI & Machine Learning</h3>
+        </div>
+        <div className="card__body">
+          <div className="cvBadgeContainer">
+            <span className="cvBadge">PyTorch</span>
+            <span className="cvBadge">Diffusion Models</span>
+            <span className="cvBadge">NeRF / 3DGS</span>
+            <span className="cvBadge">LLMs</span>
+            <span className="cvBadge">Docker</span>
+          </div>
+        </div>
+      </div>
+
+      <div className="card margin-bottom--md shadow--tl">
+        <div className="card__header">
+          <h3>Computer Vision</h3>
+        </div>
+        <div className="card__body">
+          <div className="cvBadgeContainer">
+            <span className="cvBadge">OpenCV</span>
+            <span className="cvBadge">Open3D</span>
+            <span className="cvBadge">PCL</span>
+            <span className="cvBadge">Ray Tracing</span>
+            <span className="cvBadge">Blender API</span>
+          </div>
+        </div>
+      </div>
+
+      <div className="card margin-bottom--md shadow--tl">
+        <div className="card__header">
+          <h3>Dev & Tools</h3>
+        </div>
+        <div className="card__body">
+          <div className="cvBadgeContainer">
+            <span className="cvBadge">Python</span>
+            <span className="cvBadge">MATLAB</span>
+            <span className="cvBadge">Git</span>
+            <span className="cvBadge">React/Docusaurus</span>
+            <span className="cvBadge">UAV Pilot</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div></div>
-</div>
 
-**Academic Profiles:**
+  <hr style={{margin: '3rem 0'}} />
 
-- **ORCID:** [0000-0002-5194-0655](https://orcid.org/0000-0002-5194-0655)
-- **Google Scholar:** [Profile](https://scholar.google.com/citations?hl=en&user=u3GFRMQAAAAJ&view_op=list_works)
-- **ResearchGate:** [Profile](https://www.researchgate.net/profile/Liangchao-Deng?ev=hdr_xprf)
+  {/* Publications Section */}
+  <section>
+    <h2 className="cvSectionTitle">Selected Publications</h2>
+    
+    <div className="cvPubCard">
+      <div className="row">
+        <div className="col col--10">
+          <div style={{fontWeight: 600, fontSize: '1.1rem', marginBottom: '0.25rem'}}>Leaf Optical Properties Predicted with BRDF and Phenotypic Traits</div>
+          <div style={{fontStyle: 'italic', opacity: 0.8, marginBottom: '0.5rem'}}>Plant Phenomics (2025)</div>
+          <div><strong>Deng, L.</strong>, Yu, L. X., Mao, L., et al.</div>
+          <div style={{marginTop: '0.5rem'}}>
+            <a href="https://doi.org/10.1016/j.plaphe.2025.100135" target="_blank">DOI: 10.1016/j.plaphe.2025.100135</a>
+          </div>
+        </div>
+        <div className="col col--2" style={{display: 'flex', alignItems: 'center', justifyContent: 'center'}}>
+           <AltmetricBadge doi="10.1016/j.plaphe.2025.100135" badgeType="donut" />
+        </div>
+      </div>
+    </div>
 
----
+    <div className="cvPubCard">
+      <div style={{fontWeight: 600, fontSize: '1.1rem', marginBottom: '0.25rem'}}>Digital Plant Phenotyping Platform (v25.0)</div>
+      <div style={{fontStyle: 'italic', opacity: 0.8, marginBottom: '0.5rem'}}>Zenodo (Software)</div>
+      <div><strong>Deng, L.</strong> (2025)</div>
+      <div style={{marginTop: '0.5rem'}}>
+        <a href="https://doi.org/10.5281/zenodo.17544584" target="_blank">DOI: 10.5281/zenodo.17544584</a>
+      </div>
+    </div>
+  </section>
 
-## Education
-
-**Ph.D. Candidate in Crop Science** | *2023 – 2026 (expected)*
-College of Agriculture, Shihezi University, Shihezi, Xinjiang, China
-(Joint Ph.D. Training with the Center for Excellence in Molecular Plant Sciences, Chinese Academy of Sciences, Shanghai, China)
-- **Supervisors:** Prof. Yali Zhang (SHZU) & Dr. Qingfeng Song (CAS-CEMPS)
-- **Collaborating PI:** Prof. Xinguang Zhu (CAS-CEMPS)
-- **Thesis:** Research on the optimization of cotton canopy structure and photosynthetic efficiency improvement based on multi-scale three-dimensional reconstruction and ray tracing
-
-**B.Sc. in Information and Computational Science** | *2016 – 2021*  
-College of Science, Shihezi University, Xinjiang, China
-- **Core Courses:** Numerical Solution of Differential Equations, Optimization Methods, Data Structures, Probability and Statistics, Mathematical Modeling
-- **Undergraduate Thesis:** Numerical Solution of Phase Transition Equations
-- **Research Training:** Focused on computational mathematics and numerical simulation, with applications in solving nonlinear partial differential equations.
-
----
-
-## Research Interests
-
-### Cutting-Edge Technology Focus
-
-- **Generative AI for Agriculture:** Image-to-3D plant modeling; foundation models for crop phenotyping; multimodal systems
-- **Advanced Computer Vision:** SFM, NeRF, 3D Gaussian Splatting, differentiable rendering for plant/canopy reconstruction based on cameras/UAV
-- **AI-Assisted Scientific Computing:** LLM integration in research workflows; AI-assisted code generation for phenotyping pipelines
-- **Digital Agriculture Innovation:** IoT sensor; real-time monitoring
-
-### Core Research Domains
-
-- **Precision Phenomics:** High-throughput phenotyping using UAVs, hyperspectral/multispectral imaging, and LiDAR point clouds
-- **Computational Plant Biology:** Ray-tracing photosynthesis models; BRDF-based optical simulations
-- **Environment-Smart Agriculture:** AI-driven crop adaptation strategies; predictive modeling for environmental resilience
-
-### Innovation and Impact
-
-- Bridging newest technology with practical agricultural solutions
-- Developing scalable technologies for global food security
-- Creating open-source tools for the international ag-research community
-
----
-
-## Research Experience
-
-### **Generative AI for Agricultural Applications** | *2024 – Present*
-
-- **Innovation:** Built image-to-3D generative workflows (diffusion, NeRF) for rapid plant architecture synthesis, Establish a general crop crown photosynthetic prediction model based on multi-modal phenotype data
-- **AI Integration:** Fine-tuned LLMs for domain-specific analysis and automated research pipelines
-- **Technical Achievement:** AI-assisted coding framework accelerating phenotyping algorithm development
-- **Impact:** Reduced 3D plant model generation from days to minutes, enabling near-real-time digital twins
-
-### **Next-Generation Phenotyping with Advanced Computer Vision** | *2021 – Present*
-
-- Implemented 3D Gaussian Splatting and differentiable rendering for photorealistic plant/canopy reconstruction
-- Deployed multi-view stereo (SfM/MVS) and LiDAR for high-fidelity structure capture and trait extraction
-- Based on the three-dimensional point cloud model and ray tracing algorithm of plants, build a cotton canopy photosythetic model and simulate the space-time distribution of canopy light and photosynthesis.
-- Explored the optimal combination of plant architecture and agronomic practices with maximum photosynthetic rate as the objective
-- According to the working principle of real lidar, use ray tracing algorithms to build virtual lidar, simulate radar scanning plant canopy, and obtain a large number of synthetic data training models, accelerate the development of the phenotype platform
-
----
-
-## Technical Expertise
-
-### **Artificial Intelligence & Machine Learning**
-
-- **Deep Learning:** PyTorch, TensorFlow, Transformers, CUDA
-- **Generative AI:** Diffusion models, NeRF, 3DGS, text-/image-to-3D
-- **Foundation Models:** LLM fine-tuning, CLIP, prompt engineering
-- **MLOps:** Docker, distributed training on multi-GPU
-
-### **Advanced Computer Vision & Graphics**
-
-- **3D Reconstruction:** SfM/MVS, 3DGS, photogrammetry, point-cloud processing
-- **Rendering:** Ray tracing
-- **Real-time Processing:** OpenCV, CUDA/TensorRT; edge deployment (NVIDIA Jetson)
-- **Libraries/Tools:** Open3D, PCL, Blender Python API, Three.js (web viz)
-
-### **High-Performance Computing & Cloud**
-
-- **Programming:** Python, MATLAB, R
-- **DevOps:** Git, containerization; parallel data processing on HPC
-
-### **Agricultural Technology**
-
-- **Remote Sensing:** RGB / multispectral / hyperspectral / thermal; LiDAR; UAV systems
-- **Sensor Networks:** IoT devices for microclimate & photosynthesis monitoring
-- **Data Standards:** GeoTIFF and common ag-data exchange formats
-
-### **Research & Development Tools**
-
-- **Scientific Computing:** Python, MATLAB, R; numerical modeling
-- **Collaboration:** GitHub, Slack, Notion; academic writing (Markdown, Overleaf)
-- **Project Management:** Agile/Scrum; reproducible research workflows
-
----
-
-## Publications & Research Output
-
-1. **Deng, L.**, Yu, L. X., Mao, L., Wang, Y., Guo, X., Wang, M., Zhang, Y., Song, Q., Zhu, X.-G. (2025).
-   *Leaf Optical Properties Predicted with BRDF and Phenotypic Traits in Four Species: Development of Novel Analysis Tools.* **Plant Phenomics** [DOI:10.1016/j.plaphe.2025.100135](https://doi.org/10.1016/j.plaphe.2025.100135) [**PDF**](/files/brdf.pdf)
-   <AltmetricBadge doi="10.1016/j.plaphe.2025.100135" badgeType="donut" />
-
----
-
-## Teaching and Mentoring Experience
-
-### **Student Mentoring**
-
-- **Yu Jingxuan** | *Undergraduate Research* | *2023 – 2025*
-  **Project:** Field-scale 3D reconstruction & quantitative analysis of cotton varieties (UAV)
-  **Role/Outcome:** Guided MVS pipeline; student gained 3D modeling & data-analysis proficiency
-- **Zhang Rongze** | *Undergraduate Research* | *2023 – 2025*
-  **Project:** Single-plant 3D reconstruction & morphological quantification
-  **Role/Outcome:** Contributed to automated phenotyping workflow
-- **Xie Hejiang** | *Undergraduate Research* | *2023 – 2025*
-  **Project:** Cotton yield response under nitrogen treatment regimes
-  **Role/Outcome:** Trained in experimental design & statistics; results supported N optimization
-
-**Mentoring Philosophy:** Hands-on learning; rigorous experimental design; integration of computation with agronomy; reproducible, open science.
-
----
-
-## Innovation & Entrepreneurship
-
-### **Open-Source Contributions**
-
-- **Stereo-Vision-Camera-Box** · *Python, Computer Vision*
-  Advanced stereo-vision system with custom hardware & GUI for depth and 3D point clouds in phenotyping.
-  https://github.com/smiler488/Stereo-Vision-Camera-Box
-- **CCO-Flight-Planner** · *Python, UAV Technology*
-  Automated DJI flight planning from KML polygons; KMZ waypoint generation for field surveys.
-  https://github.com/smiler488/cco-flight-planner
-- **RootQuantify** · *Python, Image Analysis*
-  Batch root-image quantification with robust preprocessing and morphology metrics.
-  https://github.com/smiler488/RootQuantify
-- **Custom-Harvard-Citation-Tool** · *Academic Productivity*
-  Zotero-friendly citation insertion with journal-abbreviation support (slides/papers).
-  https://github.com/smiler488/custom-harvard-with-journal-abbr
-
-**Technical Impact:** 50+ combined stars; adopted in practical ag-research workflows.
-
----
-
-## Languages
-
-- **Chinese (Mandarin):** Native
-- **English:** Proficient (academic writing, presentations, collaboration)
-
----
-
-## References
-
-**Prof. Yali Zhang**
-Professor & Ph.D. Supervisor, College of Agriculture, Shihezi University
-Email: [zhangyali_cn@foxmail.com](mailto:zhangyali_cn@foxmail.com)
-
-**Dr. Qingfeng Song**
-Research Associate & Co-supervisor, CAS Center for Excellence in Molecular Plant Sciences (CEMPS)
-Email: [songqf@cemps.ac.cn](mailto:zhangyali_cn@foxmail.com)
-
-**Additional references available upon request**
-
----
-
-*Last updated: October 2025*
-
-<section className="cvFooterSection">
-  <h3 style={{marginBottom: 8}}>Visitors</h3>
-  <VisitorMap mountInToc={false} />
-  <noscript>
-    <a href="https://mapmyvisitors.com/web/1c0ty" title="Visit tracker">
-      <img className="visitorMapImage" src="https://mapmyvisitors.com/map.png?d=ccC5JZBvNNpRHfn94y3CRXzvvcSb99CMKXuy-7wzczI&cl=ffffff" alt="Visitor map" />
-    </a>
-  </noscript>
-</section>
+  {/* Footer */}
+  <div style={{marginTop: '4rem', textAlign: 'center', opacity: 0.6}}>
+    <p>Last updated: January 2026</p>
+    <VisitorMap mountInToc={false} />
+  </div>
 
 </div>
