--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -41,6 +41,18 @@ title: Learning Resources
   <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>AI Engineering & Agentic Systems</h2>
   <div className="resourceGrid">
     <div className="resourceCard">
+      <div className="resourceTitle">PyTorch</div>
+      <div className="resourceDesc">Open-source deep learning framework with dynamic computation graphs. The preferred choice for research and production.</div>
+      <a href="https://pytorch.org/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">TensorFlow</div>
+      <div className="resourceDesc">Google's open-source ML platform. Comprehensive ecosystem for building and deploying ML models at scale.</div>
+      <a href="https://www.tensorflow.org/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
       <div className="resourceTitle">Model Context Protocol (MCP)</div>
       <div className="resourceDesc">The open standard from Anthropic for connecting AI assistants to systems and data.</div>
       <a href="https://modelcontextprotocol.io/" target="_blank" className="resourceLink">Visit Site →</a>
@@ -101,6 +113,33 @@ title: Learning Resources
       <div className="resourceTitle">Harvard CS50</div>
       <div className="resourceDesc">Introduction to Computer Science. Renowned for its pedagogical excellence.</div>
       <a href="https://cs50.harvard.edu/x/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+  </div>
+
+  <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>🎓 Deep Learning & AI Courses</h2>
+  <div className="resourceGrid">
+    <div className="resourceCard">
+      <div className="resourceTitle">Stanford CS231n</div>
+      <div className="resourceDesc">Convolutional Neural Networks for Visual Recognition. The definitive course on CNN and computer vision.</div>
+      <a href="http://cs231n.stanford.edu/" target="_blank" className="resourceLink">Visit Course →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Fast.ai Practical Deep Learning</div>
+      <div className="resourceDesc">Free, practical deep learning course for coders. Learn to build state-of-the-art models with minimal math.</div>
+      <a href="https://www.fast.ai/" target="_blank" className="resourceLink">Visit Course →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">ML from Scratch</div>
+      <div className="resourceDesc">Implement machine learning algorithms from scratch. Great for understanding fundamentals deeply.</div>
+      <a href="https://github.com/eriklindernoren/ML-From-Scratch" target="_blank" className="resourceLink">Visit GitHub →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">DeepLearning.AI</div>
+      <div className="resourceDesc">Andrew Ng's comprehensive deep learning specialization. Covers neural networks, CNNs, RNNs, and more.</div>
+      <a href="https://www.deeplearning.ai/" target="_blank" className="resourceLink">Visit Site →</a>
     </div>
   </div>
 
