delete emoji in resource

--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -116,7 +116,7 @@ title: Learning Resources
     </div>
   </div>
 
-  <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>🎓 Deep Learning & AI Courses</h2>
+  <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}> Deep Learning & AI Courses</h2>
   <div className="resourceGrid">
     <div className="resourceCard">
       <div className="resourceTitle">Stanford CS231n</div>
