--- a/src/pages/resources.mdx
+++ b/src/pages/resources.mdx
@@ -89,6 +89,144 @@ title: Learning Resources
     </div>
   </div>
 
+  <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>Deployment & AI Tools</h2>
+  <div className="resourceGrid">
+    <div className="resourceCard">
+      <div className="resourceTitle">Vercel</div>
+      <div className="resourceDesc">Cloud platform for deploying web applications with zero configuration. Ideal for Next.js, React, and static sites.</div>
+      <a href="https://vercel.com/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Hugging Face</div>
+      <div className="resourceDesc">The AI community's hub for models, datasets, and demos. Access thousands of pre-trained models for NLP, CV, and more.</div>
+      <a href="https://huggingface.co/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Ollama</div>
+      <div className="resourceDesc">Run large language models locally on your machine. Simple setup, supports Llama, Mistral, and more.</div>
+      <a href="https://ollama.ai/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">n8n</div>
+      <div className="resourceDesc">Open-source workflow automation platform. Connect apps and automate tasks with a visual interface.</div>
+      <a href="https://n8n.io/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Claude Skills</div>
+      <div className="resourceDesc">Anthropic's Claude AI capabilities and skills. Learn about prompt engineering, tool use, and AI assistance.</div>
+      <a href="https://www.anthropic.com/claude" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Anthropic API</div>
+      <div className="resourceDesc">Build with Claude using Anthropic's API. Access state-of-the-art language models for your applications.</div>
+      <a href="https://www.anthropic.com/api" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">ComfyUI</div>
+      <div className="resourceDesc">Powerful node-based UI for building AI workflows, especially for image generation and diffusion models.</div>
+      <a href="https://github.com/comfyanious/ComfyUI" target="_blank" className="resourceLink">Visit GitHub →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Hunyuan3D</div>
+      <div className="resourceDesc">Tencent's 3D generation model for creating 3D assets from text or images.</div>
+      <a href="https://github.com/Tencent/Hunyuan3D" target="_blank" className="resourceLink">Visit GitHub →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Marble (WorldLabs)</div>
+      <div className="resourceDesc">AI/ML research and tools for spatial intelligence and world modeling.</div>
+      <a href="https://worldlabs.ai/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">OpenCode</div>
+      <div className="resourceDesc">Code generation and AI-assisted programming tools for developers.</div>
+      <a href="https://opencode.ai/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+  </div>
+
+  <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>Research Laboratory Websites</h2>
+  <div className="resourceGrid">
+    <div className="resourceCard">
+      <div className="resourceTitle">Purdue ABE Plant Sensor Lab</div>
+      <div className="resourceDesc">Agricultural and Biological Engineering plant sensor research at Purdue University.</div>
+      <a href="https://engineering.purdue.edu/ABEPlantSensorLab" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">UC Davis Bailey Lab</div>
+      <div className="resourceDesc">Plant biology and genetics research at UC Davis.</div>
+      <a href="https://baileylab.ucdavis.edu/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">LR Xiang Lab</div>
+      <div className="resourceDesc">Research laboratory focusing on plant science and biotechnology.</div>
+      <a href="https://lr-xiang.github.io/lxweb/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Ying Sun Lab</div>
+      <div className="resourceDesc">Plant phenomics and remote sensing research.</div>
+      <a href="https://www.yingsun.info/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Kaiyu Guan Lab</div>
+      <div className="resourceDesc">Plant phenotyping and computer vision research at UIUC.</div>
+      <a href="http://faculty.nres.illinois.edu/~kaiyuguan/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Ainsworth Lab</div>
+      <div className="resourceDesc">Plant biology and photosynthesis research at UIUC.</div>
+      <a href="https://publish.illinois.edu/ainsworthlab/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Kaiming He (CSAIL MIT)</div>
+      <div className="resourceDesc">Computer vision and deep learning research at MIT CSAIL.</div>
+      <a href="https://people.csail.mit.edu/kaiming/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Yann LeCun</div>
+      <div className="resourceDesc">Deep learning pioneer and NYU professor. Founder of FAIR.</div>
+      <a href="http://yann.lecun.com/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Qi Wang</div>
+      <div className="resourceDesc">Research and academic website.</div>
+      <a href="https://qiwang.me/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">ScaleLab SJTU</div>
+      <div className="resourceDesc">Shanghai Jiao Tong University scale research laboratory.</div>
+      <a href="https://scalelab-sjtu.github.io/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Long Lab (UIUC)</div>
+      <div className="resourceDesc">Plant biology and genetics research at UIUC.</div>
+      <a href="https://lab.igb.illinois.edu/long/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Stanford Vision Lab</div>
+      <div className="resourceDesc">Computer vision and machine learning research at Stanford.</div>
+      <a href="https://svl.stanford.edu/" target="_blank" className="resourceLink">Visit Site →</a>
+    </div>
+  </div>
+
   <h2 className="cvSectionTitle" style={{marginTop: '4rem'}}>Computer Science Education</h2>
   <div className="resourceGrid">
     <div className="resourceCard">
@@ -122,6 +260,12 @@ title: Learning Resources
       <div className="resourceTitle">Stanford CS231n</div>
       <div className="resourceDesc">Convolutional Neural Networks for Visual Recognition. The definitive course on CNN and computer vision.</div>
       <a href="http://cs231n.stanford.edu/" target="_blank" className="resourceLink">Visit Course →</a>
+    </div>
+
+    <div className="resourceCard">
+      <div className="resourceTitle">Stanford CS230</div>
+      <div className="resourceDesc">Deep Learning. A comprehensive course covering neural networks, CNNs, RNNs, and practical applications.</div>
+      <a href="https://cs230.stanford.edu/" target="_blank" className="resourceLink">Visit Course →</a>
     </div>
 
     <div className="resourceCard">
