--- a/i18n/zh-Hans/docusaurus-plugin-content-pages/cv.mdx
+++ b/i18n/zh-Hans/docusaurus-plugin-content-pages/cv.mdx
@@ -32,13 +32,16 @@ import VisitorMap from '@site/src/components/VisitorMap';
       <h2 className="cvSectionTitle">教育经历</h2>
       <div className="cvTimeline">
         <div className="cvTimelineItem">
-          <div className="cvTimelineDate">2023 – 2026（预计）</div>
-          <div className="cvTimelineTitle">作物科学 博士研究生</div>
+          <div className="cvTimelineDate">2021 – 2026（预计）</div>
+          <div className="cvTimelineTitle">作物科学 硕博连读</div>
           <div className="cvTimelineSubtitle">石河子大学 (SHZU) × 中科院分子植物卓越中心 (CEMPS)</div>
-          <p>联合培养博士项目，专注于智慧农业与作物表型组学。</p>
+          <p>- 2021-2023：硕士研究生阶段</p>
+          <p>- 2023-2026：博士研究生阶段（联合培养）</p>
+          <p>专注于棉花冠层光合模型与作物表型组学研究。</p>
           <div className="cvBadgeContainer">
             <span className="cvBadge">精准农业</span>
             <span className="cvBadge">冠层光合作用</span>
+            <span className="cvBadge">硕博连读</span>
           </div>
         </div>
         <div className="cvTimelineItem">
