--- a/src/pages/cv.mdx
+++ b/src/pages/cv.mdx
@@ -29,13 +29,16 @@ import VisitorMap from '@site/src/components/VisitorMap';
       <h2 className="cvSectionTitle">Education</h2>
       <div className="cvTimeline">
         <div className="cvTimelineItem">
-          <div className="cvTimelineDate">2023 – 2026 (Expected)</div>
-          <div className="cvTimelineTitle">Ph.D. in Crop Science</div>
+          <div className="cvTimelineDate">2021 – 2026 (Expected)</div>
+          <div className="cvTimelineTitle">Integrated Master-Ph.D. in Crop Science</div>
           <div className="cvTimelineSubtitle">Shihezi University (SHZU) × CAS-CEMPS</div>
-          <p>Joint Ph.D. Training with the Center for Excellence in Molecular Plant Sciences, Chinese Academy of Sciences.</p>
+          <p>- 2021-2023: Master's stage</p>
+          <p>- 2023-2026: Ph.D. stage (Joint Training)</p>
+          <p>Research focus: Cotton canopy photosynthetic modeling and crop phenomics.</p>
           <div className="cvBadgeContainer">
             <span className="cvBadge">Precision Agriculture</span>
             <span className="cvBadge">Canopy Photosynthesis</span>
+            <span className="cvBadge">Integrated Master-Ph.D.</span>
           </div>
         </div>
         <div className="cvTimelineItem">
